add experiments section

--- a/leader-pigs/write-up/write-up.tex
+++ b/leader-pigs/write-up/write-up.tex
@@ -197,6 +197,9 @@ Our program can be run with:
   \textbf{\texttt{./sbt11 numPigs worldSizeRatio}}: where numPigs is the number of pigs in the simulation and worldSizeRatio is the ratio of world:pigs. For example, to run with 10 pigs on a world of size 30 you would run: ./sbt11 10 3.
 \end{enumerate}
 
+\section{Experiments:}
+\includegraphics{figs/chart_1.pdf}
+
 \pagebreak
 
 \section{Test cases:}
