--- a/leader-pigs/write-up/write-up.tex
+++ b/leader-pigs/write-up/write-up.tex
@@ -199,6 +199,7 @@ Our program can be run with:
 
 \section{Experiments:}
 \includegraphics{figs/chart_1.pdf}
+\includegraphics{figs/chart_2.pdf}
 
 \pagebreak
 
@@ -215,9 +216,9 @@ The Leader Election test case, tests the algorithm by first selecting the leader
 We did 2 major experiments:
 \begin{enumerate}[1.]
 \item
-  Expected number of pigs hit as function of the world size to number of pigs ratio and as a function of the time to target. 
+  Expected number of pigs hit as function of the world size to number of pigs ratio.
 \item
-  Expected number of pigs hit as a function of the simulated network delay. Note that in both these experiments the positions of the pigs and the stone columns and the number of stone columns are generated randomly. 
+  Expected number of pigs hit as function of the the bird landing time.
 \end{enumerate} 
 
 \section{Sample Election Output:}
